docker/kbuild/secret/sectettest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secrettest
  labels:
    app: secrettest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secrettest
  template:
    metadata:
      labels:
        app: secrettest
    spec:
      containers:
        - name: secrettest
          image: "docker-registry.domain.com/tapp:0.0.12" # docker run -p 8082:80 docker-registry.domain.com/tapp:0.0.12
          ports:
            - containerPort: 80
          #          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: image-store
              mountPath: /home/node/app/pvc

              # /usr/src/envdir/.env /home/node/app/.env
            - name: env-lh
              mountPath: /usr/src/envdir
              readOnly: true

      imagePullSecrets:
        - name: regcred
      volumes:
        - name: image-store
          persistentVolumeClaim:
            claimName: cephfs-pvc
            readOnly: false
        - name: env-lh
          secret:
            secretName: env-lh
---
apiVersion: v1
kind: Service
metadata:
  name: secrettest-service
spec:
  #  type: NodePort
  ports:
    - targetPort: 80
      port: 80
  #      nodePort: 30010
  selector:
    app: secrettest
