docker/kbuild/secret/sectettest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secrettest-ingress
spec:
  rules:
    - host: secrettest.domain.com
      http:
        paths:
          - backend:
              serviceName: secrettest-service
              servicePort: 80
